Do not unmute when muted by audio indicator

This CL adds a check in SoundContentSettingObserver to avoid unmuting a
tab if muted by the audio indicator.

Bug: 806482
Change-Id: I433c1fcb7a8e8034a9b100077e2f876e88a7d409
Reviewed-on: https://chromium-review.googlesource.com/891259
Reviewed-by: Raymes Khoury <raymes@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532861}
Former-commit-id: 08e823a59c72ef9ded0d6b7e902eedcf4133ab4d